--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "MILP-based scheduling for graduate visit days"
 requires-python = ">=3.9"
 readme = "README.md"
-license = { text = "BSD-3-Clause" }
+license = "BSD-3-Clause"
 license-files = ["LICENSE"]
 keywords = ["scheduling", "milp", "pyomo", "optimization"]
 authors = [
