--- a/examples/config_formulation.yaml
+++ b/examples/config_formulation.yaml
@@ -1,15 +1,18 @@
 buildings:
-  BuildingA: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
-  BuildingB: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
-building_order: ["BuildingA", "BuildingB"]
+  ABC: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
+  XYZ: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
+building_order: ["ABC", "XYZ"]
 breaks: [2, 3]
 
-areas: ["Area1", "Area2"]
+areas: ["Energy", "Bio", "Theory"]
 area_weights:
   Area1: 1.0
   Area2: 0.5
 
 faculty_availability:
-  Faculty A: [1, 2, 3, 4]
-  Faculty B: [1, 2, 3, 4]
-  Faculty C: [1, 2, 3, 4]
+  Prof. A: [1, 2, 3, 4]
+  Prof. B: [1, 2, 4]
+  Prof. C: [1, 3, 4]
+  Prof. D: [2, 3, 4]
+  Prof. E: [1, 2, 3]
+  Prof. F: [1, 3, 4]
