--- a/examples/faculty_formulation.yaml
+++ b/examples/faculty_formulation.yaml
@@ -1,18 +1,33 @@
 faculty:
-  Faculty A:
-    building: BuildingA
+  Prof. A:
+    building: ABC
     room: "201"
-    areas: ["Area1"]
+    areas: ["Energy", "Theory"]
     status: active
-  Faculty B:
-    building: BuildingB
+  Prof. B:
+    building: XYZ
     room: "102"
-    areas: ["Area2"]
+    areas: ["Bio"]
     status: active
-  Faculty C:
-    building: BuildingA
+  Prof. C:
+    building: ABC
     room: "203"
-    areas: ["Area1", "Area2"]
+    areas: ["Theory"]
+    status: active
+  Prof. D:
+    building: XYZ
+    room: "104"
+    areas: ["Energy"]
+    status: active
+  Prof. E:
+    building: ABC
+    room: "205"
+    areas: ["Bio", "Energy"]
+    status: active
+  Prof. F:
+    building: XYZ
+    room: "106"
+    areas: ["Theory", "Bio"]
     status: active
 
 aliases: {}
