--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,20 @@ on:
   push:
     tags:
       - "v*"
+  workflow_dispatch:
+    inputs:
+      target:
+        description: "Where to publish"
+        required: true
+        default: "testpypi"
+        type: choice
+        options:
+          - testpypi
+          - pypi
+      version:
+        description: "Optional version for TestPyPI smoke install (e.g., 0.2.1)"
+        required: false
+        type: string
 
 permissions:
   contents: read
@@ -43,6 +57,7 @@ jobs:
 
   publish-testpypi:
     name: Publish to TestPyPI
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -60,6 +75,7 @@ jobs:
 
   smoke-test-testpypi:
     name: Smoke test from TestPyPI
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     needs: publish-testpypi
     runs-on: ubuntu-latest
     steps:
@@ -70,11 +86,15 @@ jobs:
 
       - name: Install package from TestPyPI
         env:
-          RELEASE_VERSION: ${{ github.ref_name }}
+          RELEASE_VERSION: ${{ github.event_name == 'workflow_dispatch' && inputs.version || github.ref_name }}
         run: |
           python -m pip install --upgrade pip
-          VERSION_NO_V="${RELEASE_VERSION#v}"
-          python -m pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple "grad-visitor-scheduler==${VERSION_NO_V}"
+          if [ -n "${RELEASE_VERSION}" ]; then
+            VERSION_NO_V="${RELEASE_VERSION#v}"
+            python -m pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple "grad-visitor-scheduler==${VERSION_NO_V}"
+          else
+            python -m pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple grad-visitor-scheduler
+          fi
 
       - name: Import smoke test
         run: |
@@ -82,6 +102,7 @@ jobs:
 
   publish-pypi:
     name: Publish to PyPI
+    if: github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && inputs.target == 'pypi')
     needs: smoke-test-testpypi
     runs-on: ubuntu-latest
     steps:
