--- a/examples/config_formulation.yaml
+++ b/examples/config_formulation.yaml
@@ -2,6 +2,18 @@ buildings:
   ABC: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
   XYZ: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
 building_order: ["ABC", "XYZ"]
+movement:
+  policy: travel_time
+  phase_slot:
+    ABC: 1
+    XYZ: 1
+  travel_slots:
+    ABC:
+      ABC: 0
+      XYZ: 1
+    XYZ:
+      ABC: 1
+      XYZ: 0
 breaks: [2, 3]
 
 areas: ["Energy", "Bio", "Theory"]
