--- a/examples/config_three_buildings_close.yaml
+++ b/examples/config_three_buildings_close.yaml
@@ -1,12 +1,14 @@
 buildings:
   BuildingA: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
   BuildingB: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
-building_order: ["BuildingA", "BuildingB"]
+  BuildingC: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
+building_order: ["BuildingA", "BuildingB", "BuildingC"]
 movement:
   policy: none
   phase_slot:
     BuildingA: 1
     BuildingB: 1
+    BuildingC: 1
 breaks: [2]
 
 areas: ["Area1", "Area2"]
@@ -18,4 +20,3 @@ faculty_availability:
   Faculty A: [1, 2, 3, 4]
   Faculty B: [1, 2, 3, 4]
   Faculty C: [1, 2, 3, 4]
-  Faculty D: []
