--- a/examples/faculty_three_buildings.yaml
+++ b/examples/faculty_three_buildings.yaml
@@ -1,16 +1,31 @@
 faculty:
-  Faculty A:
-    building: BuildingA
-    room: "101"
-    areas: ["Area1"]
-    status: active
-  Faculty B:
-    building: BuildingB
+  Prof. A:
+    building: ABC
     room: "201"
-    areas: ["Area2"]
+    areas: ["Energy", "Theory"]
     status: active
-  Faculty C:
-    building: BuildingC
+  Prof. B:
+    building: XYZ
+    room: "102"
+    areas: ["Bio"]
+    status: active
+  Prof. C:
+    building: ABC
+    room: "203"
+    areas: ["Theory"]
+    status: active
+  Prof. D:
+    building: XYZ
+    room: "104"
+    areas: ["Energy"]
+    status: active
+  Prof. E:
+    building: LMN
     room: "301"
-    areas: ["Area1", "Area2"]
+    areas: ["Bio", "Energy"]
+    status: active
+  Prof. F:
+    building: LMN
+    room: "302"
+    areas: ["Theory", "Bio"]
     status: active
