--- a/examples/config_two_buildings_close.yaml
+++ b/examples/config_two_buildings_close.yaml
@@ -1,21 +1,23 @@
 buildings:
-  BuildingA: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
-  BuildingB: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
-building_order: ["BuildingA", "BuildingB"]
+  ABC: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
+  XYZ: ["1:00-1:25", "1:30-1:55", "2:00-2:25", "2:30-2:55"]
+building_order: ["ABC", "XYZ"]
 movement:
   policy: none
   phase_slot:
-    BuildingA: 1
-    BuildingB: 1
-breaks: [2]
+    ABC: 1
+    XYZ: 1
+breaks: [2, 3]
 
-areas: ["Area1", "Area2"]
+areas: ["Energy", "Bio", "Theory"]
 area_weights:
   Area1: 1.0
   Area2: 0.5
 
 faculty_availability:
-  Faculty A: [1, 2, 3, 4]
-  Faculty B: [1, 2, 3, 4]
-  Faculty C: [1, 2, 3, 4]
-  Faculty D: []
+  Prof. A: [1, 2, 3, 4]
+  Prof. B: [1, 2, 4]
+  Prof. C: [1, 3, 4]
+  Prof. D: [2, 3, 4]
+  Prof. E: [1, 2, 3]
+  Prof. F: [1, 3, 4]
